syntax = "proto3";
package server;
option go_package = "./module-go;module";
import "module-version.proto";
import "runner-config.proto";
import "instance.proto";
import "cmp.proto";

message GetManifestRequest {
  string ServerKey = 1; // from ags
  bool DevMode = 2; // not sure about it
  string DeveloperKey = 3; //if dev mode is on, developer_key is required, maybe if no modVerID
  string Version = 6;
  string ModuleVersionID = 7; // from ldflags if any
}

// @todo - nats auth keys?
message GetManifestResponse {
  RunnerConfig RunnerConfig = 1;
  repeated ModuleVersion Modules = 2; // empty if dev mode is on
  repeated ConfigureInstanceRequest Instances = 3; // instances to bootstrap
}


message PublishModuleRequest {
  string Name = 1; // by publisher from module info
  string Description = 2; // by publisher from module info
  string Info = 3; // from readme.md
  string DeveloperKey = 4; // from CI
  string Version = 8;  // by publisher
  repeated Component Components = 13;
}

message BuildPushOptions {
  string Username = 1;
  string Password =2;
  string Repo = 3;
  string Tag = 4;
}

message PublishModuleResponse {
  ModuleVersion Module = 1;
  BuildPushOptions Options = 2;
}

message UpdateModuleVersionRequest {
  string ID = 1;
  string Repo = 2;
  string Tag = 3;
}

message UpdateModuleVersionResponse {

}
