syntax = "proto3";
package server;
option go_package = "./module-go;module";
import "platform.messages.proto";

service PlatformService {
  rpc GetManifest(GetManifestRequest) returns (GetManifestResponse);
  rpc PublishModule(PublishModuleRequest) returns (PublishModuleResponse);
  rpc UpdateModuleVersion(UpdateModuleVersionRequest) returns (UpdateModuleVersionResponse);
}
